// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ui/shared/select/MultiSelectFilter Aucune Option Selectionee 1`] = `
<button
  aria-expanded={false}
  aria-label="ouvrir le menu"
  className="flex items-center w-full p-2 text-left text-sm"
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onPointerDown={[Function]}
>
  <span
    className="mr-auto flex line-clamp-1"
  >
    <span>
      Tous
    </span>
  </span>
  <span
    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 ml-auto"
  />
</button>
`;

exports[`Storyshots ui/shared/select/MultiSelectFilter Custom Option Et Selection 1`] = `
<button
  aria-expanded={false}
  aria-label="ouvrir le menu"
  className="flex items-center w-full p-2 text-left text-sm"
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onPointerDown={[Function]}
>
  <span
    className="fr-fi-filter-fill fr-fi--sm w-full text-center text-bf500 font-bold"
  >
     Custom open button
  </span>
  <span
    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 ml-auto"
  />
</button>
`;

exports[`Storyshots ui/shared/select/MultiSelectFilter Plusieurs Options Selectionees 1`] = `
<button
  aria-expanded={false}
  aria-label="ouvrir le menu"
  className="flex items-center w-full p-2 text-left text-sm"
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onPointerDown={[Function]}
>
  <span
    className="mr-auto flex line-clamp-1"
  >
    <span>
      Option 2
      , 
    </span>
    <span>
      Option 3
    </span>
  </span>
  <span
    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 ml-auto"
  />
</button>
`;
